testing/test-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcert-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcert-test
  template:
    metadata:
      labels:
        app: kcert-test
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kcert-test
          image: nabsul/kcert-test-app:v0.0.2
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: kcert-test
  namespace: default
spec:
  selector:
    app: kcert-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
